# Helfrix_C2

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: main.rs
src/: main.rs  server.rs
