[package]
name = "helfrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.6.0"
screenshots = "0.4.5"
whoami = "1.2.3"
[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]


[profile.release] 
strip = "symbols" 
debug  = false
opt-level = "z" 
panic = "abort"
codegen-units = 1
lto = true 